--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-8" align="middle">What's happening in my location?</h1>
+    <h1 class="display-8" align="middle">What's poppin' in my location?</h1>
     <br>
     <nav class="navbar navbar-light bg-fluid">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,12 @@
     </nav>
   </div>
 </div>
+<!-- <div class="container"> -->
+<div id="weather" align="center"><br>Weather</div>
 <div id="map"></div>
+<div id="sports" align="center"><br>Sports Headlines</div>
+<div id="otherStuff" align="center"><br>Other Stuff</div>
+<!-- </div> -->
 <script>
 function initMap(){
 // map options
@@ -36,7 +41,7 @@ center:{lat:34.0635,lng:-118.4455}
 var map = new google.maps.Map(document.getElementById('map'), options);
 
 //Add Marker
-//var marker = new google.maps.Marker({
+//==var marker = new google.maps.Marker({
   //position:{lat:34.0259,lng:-118.7798}
   //map:map
 //});
