--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>What's poppin?</title>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+    <script src="javascript/sports.js"></script>
+   
   </head>
 
   <body>
@@ -25,6 +29,7 @@
   </div>
 </div>
 <div id="map"></div>
+<div id="sports"></div>
 <script>
 function initMap(){
 // map options
@@ -43,9 +48,9 @@ var map = new google.maps.Map(document.getElementById('map'), options);
 }
 </script>
 
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJDEMLaIn9zuwgHOR4Ld10ab8yLV8sIWU&callback=initMap">
-    </script>
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJDEMLaIn9zuwgHOR4Ld10ab8yLV8sIWU&callback=initMap">
+</script>
 
     <!-- <div class="pos-f-t">
   <div class="collapse" id="navbarToggler">
@@ -56,7 +61,6 @@ var map = new google.maps.Map(document.getElementById('map'), options);
   </div> -->
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/employee.js"></script>
+ 
   </body>
 </html>
