Google Maps tracking location

--- a/index.html
+++ b/index.html
@@ -30,23 +30,6 @@
 <div id="sports" align="center"><br>Sports Headlines</div>
 <div id="otherStuff" align="center"><br>Other Stuff</div>
 <!-- </div> -->
-<script>
-function initMap(){
-// map options
-var options = {
-zoom:11,
-center:{lat:34.0635,lng:-118.4455}
-}
-// New Map
-var map = new google.maps.Map(document.getElementById('map'), options);
-
-//Add Marker
-//==var marker = new google.maps.Marker({
-  //position:{lat:34.0259,lng:-118.7798}
-  //map:map
-//});
-}
-</script>
 
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJDEMLaIn9zuwgHOR4Ld10ab8yLV8sIWU&callback=initMap">
@@ -62,6 +45,6 @@ var map = new google.maps.Map(document.getElementById('map'), options);
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/employee.js"></script>
+    <script src="assets/map.js"></script>
   </body>
 </html>
