--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>What's poppin?</title>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
   </head>
@@ -11,7 +13,7 @@
   <body>
     <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-8" align="middle">What's poppin' in my location?</h1>
+    <h1 class="display-8" align="middle">What's poppin'?</h1>
     <br>
     <nav class="navbar navbar-light bg-fluid">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,12 +26,29 @@
     </nav>
   </div>
 </div>
-<!-- <div class="container"> -->
-<div id="weather" align="center"><br>Weather</div>
-<div id="map"></div>
-<div id="sports" align="center"><br>Sports Headlines</div>
-<div id="otherStuff" align="center"><br>Other Stuff</div>
-<!-- </div> -->
+<div class="container">
+<div class="row">
+  <div class="col l12">
+<div class="content-card" id="weather-div" align="center"><br>Weather</div>
+</div>
+</div>
+<div class= "row">
+<div class="col l12">
+<div class="content-card" id="map-div"></div>
+</div>
+</div>
+<div class="row">
+<div class= "col l12">
+<div class="content-card" id="sports-div" align="center"><br>Sports Headlines</div>
+</div>
+</div>
+<div class="row">
+<div class="col l12">
+<div class="content-card" id="places-div" align="center"><br>Restaurants</div>
+</div>
+</div>
+</div>
+
 <script>
 function initMap(){
 // map options
@@ -38,7 +57,7 @@ zoom:11,
 center:{lat:34.0635,lng:-118.4455}
 }
 // New Map
-var map = new google.maps.Map(document.getElementById('map'), options);
+var map = new google.maps.Map(document.getElementById('map-div'), options);
 
 //Add Marker
 //==var marker = new google.maps.Marker({
@@ -62,6 +81,7 @@ var map = new google.maps.Map(document.getElementById('map'), options);
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/employee.js"></script>
+    <script src="assets/app.js"></script>
+    <script src="javascript/yelp.js"></script>
   </body>
 </html>
