mades changes to mobile response

--- a/index.html
+++ b/index.html
@@ -28,26 +28,30 @@
 </div>
 <div class="container">
 <div class="row">
-  <div class="col l12">
+<div class="col s12 l6">
 <div class="content-card" id="weather-div" align="center"><br>Weather</div>
 </div>
-</div>
-<div class= "row">
-<div class="col l12">
+
+<!-- <div class= "row"> -->
+<div class="col s12 l6">
 <div class="content-card" id="map-div"></div>
 </div>
 </div>
+
 <div class="row">
-<div class= "col l12">
+<div class= "col s12 l12">
 <div class="content-card" id="sports-div" align="center"><br>Sports Headlines</div>
 </div>
 </div>
+
 <div class="row">
-<div class="col l12">
+<div class="col l6 s12">
 <div class="content-card" id="places-div" align="center"><br>Restaurants</div>
 </div>
 </div>
 </div>
+
+
 
 <script>
 function initMap(){
