added color and cards

--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="utf-8">
     <title>What's poppin?</title>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <!-- materialized link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <!-- firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
   </head>
 
   <body>
-    <div class="jumbotron jumbotron-fluid">
+    <nav>
+    <div class="nav-wrapper">
+      <form>
+        <div class="input-field">
+          <input id="search" type="search" required>
+          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+          <i class="material-icons">close</i>
+        </div>
+      </form>
+    </div>
+  </nav>
+  <br>
+    <!-- <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-8" align="middle">What's poppin'?</h1>
     <br>
@@ -25,31 +37,59 @@
       </form>
     </nav>
   </div>
-</div>
-<div class="container">
+</div> -->
+
+
+<!-- <div class="container">
 <div class="row">
-<div class="col s12 l6">
-<div class="content-card" id="weather-div" align="center"><br>Weather</div>
-</div>
+<div class="col s12 l6"> -->
+<div class="row">
+      <div class="col s12 l6">
+        <div class="card-panel">
+          <div class="content-card" id="weather-div" align="center"><br>Weather</div>
+          </span>
+        </div>
+      </div>
 
 <!-- <div class= "row"> -->
+<!-- <div class="col s12 l6"> -->
+
 <div class="col s12 l6">
-<div class="content-card" id="map-div"></div>
+  <div class="card-panel">
+      <div class="content-card" id="map-div"></div>
+    </span>
+  </div>
 </div>
 </div>
 
+
 <div class="row">
-<div class= "col s12 l12">
-<div class="content-card" id="sports-div" align="center"><br>Sports Headlines</div>
+  <div class="col s12 l12">
+    <div class="card-panel">
+<!-- <div class= "col s12 l12"> -->
+        <div class="content-card" id="sports-div" align="center"><br>Sports Headlines</div>
+    </span>
+  </div>
 </div>
 </div>
 
+<!-- </div>
+</div> -->
+
+<!-- <div class="row">
+<div class="col l12 s12"> -->
 <div class="row">
-<div class="col l6 s12">
+  <div class="col s12 l12">
+    <div class="card-panel">
 <div class="content-card" id="places-div" align="center"><br>Restaurants</div>
+</span>
 </div>
 </div>
 </div>
+
+<!-- </div>
+</div>
+</div> -->
 
 
 
