Colors and header added Navid

--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <!-- firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+
   </head>
 
   <body>
     <nav>
+    <div class="nav-header">
+      <a href="#" class="title valign center-block" style="color:#7FC3EB">Poppin.<a>
+    </div>
+    </nav>
+    <nav>
     <div class="nav-wrapper">
       <form>
         <div class="input-field">
-          <input id="search" type="search" required>
-          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+          <input id="search" placeholder="Search desired location here." type="search" required>
+          <label class="label-icon" for="search"><i class="material-icons"></i></label>
           <i class="material-icons">close</i>
         </div>
       </form>
@@ -39,14 +45,13 @@
   </div>
 </div> -->
 
-
 <!-- <div class="container">
 <div class="row">
 <div class="col s12 l6"> -->
 <div class="row">
       <div class="col s12 l6">
         <div class="card-panel">
-          <div class="content-card" id="weather-div" align="center"><br>Weather</div>
+          <div class="content-card" id="weather-div" align="center" style= "color:#7FC3EB"><br>Weather</div>
           </span>
         </div>
       </div>
@@ -67,7 +72,7 @@
   <div class="col s12 l12">
     <div class="card-panel">
 <!-- <div class= "col s12 l12"> -->
-        <div class="content-card" id="sports-div" align="center"><br>Sports Headlines</div>
+        <div class="content-card" id="sports-div" align="center" style="color:#7FC3EB"><br>Sports Headlines</div>
     </span>
   </div>
 </div>
@@ -81,7 +86,7 @@
 <div class="row">
   <div class="col s12 l12">
     <div class="card-panel">
-<div class="content-card" id="places-div" align="center"><br>Restaurants</div>
+<div class="content-card" id="places-div" align="center" style="color:#7FC3EB"><br>Restaurants</div>
 </span>
 </div>
 </div>
