--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>What's poppin?</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
     <!-- materialized link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <!-- firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
@@ -148,9 +149,10 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJDEMLaIn9zuwgHOR4Ld10ab8
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <script src="assets/map.js"></script>
-    <script src="assets/app.js"></script>
-    <script src="javascript/yelp.js"></script>
+    <script src="assets/javascript/map.js"></script>
+    <script src="assets/javascript/app.js"></script>
+    <script src="assets/javascript/sports.js"></script>
+    <!-- <script src="javascript/yelp.js"></script> -->
 
   </body>
 </html>
