--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
-   
+
   </head>
 
   <body>
@@ -36,20 +36,6 @@
     </div>
   </nav>
   <br>
-    <!-- <div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-8" align="middle">What's poppin'?</h1>
-    <br>
-    <nav class="navbar navbar-light bg-fluid">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <form class="form-inline">
-        <input class="form-control mr-sm-3" type="search" placeholder="Please enter your location. City, State, or Zip Code" style="width:500px;" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </nav>
-  </div>
 
 </div> -->
 
@@ -111,10 +97,10 @@
 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByBWhXulCPr2mjC2po6lufTVuHD9QmeU0&libraries=places"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
     <script src="assets/javascript/map.js"></script>
     <script src="assets/javascript/app.js"></script>
     <script src="assets/javascript/sports.js"></script>
+    <script src="assets/javascript/weather.js"></script>
     <!-- <script src="javascript/yelp.js"></script> -->
 
   </body>
