--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="input-field">
           <input id="search" placeholder="Search desired location here." type="search" required>
           <label class="label-icon" for="search"><i class="material-icons"></i></label>
-          <i class="material-icons">close</i>
+          <i class="material-icons">reset</i>
         </div>
       </form>
     </div>
