--- a/index.html
+++ b/index.html
@@ -20,87 +20,68 @@
 
   <body>
     <nav>
-    <div class="nav-header">
-      <a href="#" class="title valign center-block title" style="color:#7FC3EB">What's Poppin'<a>
-    </div>
-    </nav>
-    <nav>
-    <div class="nav-wrapper">
-      <form>
-        <div class="input-field">
-          <input id="search" placeholder="Search desired location here." type="search" required>
-          <label class="label-icon" for="search"><i class="material-icons"></i></label>
-          <i class="material-icons">reset</i>
-        </div>
-      </form>
-    </div>
-  </nav>
-  <br>
-
-</div>
-
-<!-- <div class="container">
-
-<div class="row">
-<div class="col s12 l6"> -->
-<div class="row">
-      <div class="col s12 l6">
-        <div class="card-panel">
-          <div class="content-card" id="weather-div" align="center"><br>Weather</div>
-          </span>
-        </div>
+      <div class="nav-header">
+        <a href="#" class="title valign center-block title" style="color:#7FC3EB">What's Poppin'<a>
       </div>
+    </nav>
 
-<!-- <div class= "row"> -->
-<!-- <div class="col s12 l6"> -->
+    <nav>
+      <div class="nav-wrapper">
+        <form>
+          <div class="input-field">
+            <input id="search" placeholder="Search desired location here." type="search" required>
+            <label class="label-icon" for="search"><i class="material-icons"></i></label>
+            <i class="material-icons">reset</i>
+          </div>
+        </form>
+      </div>
+    </nav>
 
-<div class="col s12 l6">
-  <div class="card-panel">
-      <div class="content-card" id="map-div"></div>
-    </span>
+<div class="container">
+
+  <div class="row">
+    <div class="col s12 m6">
+      <div class="card-panel">
+        <div class="content-card" id="weather-div" align="center">Weather</div>
+      </div>
+    </div>
   </div>
-</div>
-</div>
 
-
-<div class="row">
-  <div class="col s12 l12">
-    <div class="card-panel">
-<!-- <div class= "col s12 l12"> -->
-        <div class="content-card" id="sports-div" align="center"><br>Sports</div>
-    </span>
+    
+  <div class="row">
+    <div class="col s12 m6">
+      <div class="card-panel">
+        <div class="content-card" id="map-div"></div>
+      </div>
+    </div>
   </div>
-</div>
-</div>
 
-<!-- </div>
-</div> -->
 
-<!-- <div class="row">
-<div class="col l12 s12"> -->
-<div class="row">
-  <div class="col s12 l12">
-    <div class="card-panel">
-<div class="content-card" id="places-div" align="center"><br>Restaurants</div>
-</span>
-</div>
-</div>
+  <div class="row">
+    <div class="col s12 m12">
+      <div class="card-panel">
+          <div class="content-card" id="sports-div" align="center">Sports</div>
+      </div>
+    </div>
+  </div>
 
-<!-- <div class="container"> -->
-<!-- <div id="weather" align="center"><br>Weather</div>
-<div id="map"></div>
-<div id="sports" align="center"><br>Sports Headlines</div>
-<div id="otherStuff" align="center"><br>Other Stuff</div> -->
-<!-- </div> -->
+  <div class="row">
+    <div class="col s12 m12">
+      <div class="card-panel">
+        <div class="content-card" id="places-div" align="center">Restaurants</div>
+      </div>
+    </div>
+  </div>
 
-</div>
+</div> <!-- container close -->
 
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByBWhXulCPr2mjC2po6lufTVuHD9QmeU0&libraries=places"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/javascript/map.js"></script>
-    <script src="assets/javascript/app.js"></script>
-    <script src="assets/javascript/sports.js"></script>
-    <script src="assets/javascript/weather.js"></script>
+
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByBWhXulCPr2mjC2po6lufTVuHD9QmeU0&libraries=places"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="assets/javascript/map.js"></script>
+  <script src="assets/javascript/app.js"></script>
+  <script src="assets/javascript/sports.js"></script>
+  <script src="assets/javascript/weather.js"></script>
     <!-- <script src="javascript/yelp.js"></script> -->
 
   </body>
