added more detail to maps infowindow on click

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByBWhXulCPr2mjC2po6lufTVuHD9QmeU0&libraries=places"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="assets/javascript/map.js"></script>
+  <script src="assets/javascript/map.js" defer></script>
   <script src="assets/javascript/app.js"></script>
   <script src="assets/javascript/sports.js"></script>
   <script src="assets/javascript/weather.js"></script>
