--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>What's poppin?</title>
-
+    <link rel="shortcut icon" href="assets/images/favicon7.png" type="image/png"/>
     <!-- materialized link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -41,34 +41,38 @@
 
   <div class="row">
     <div class="col s12 m6">
+      <div class="card-panel">Weather</div>
       <div class="card-panel">
-        <div class="content-card" id="weather-div" align="center">Weather</div>
+        <div class="content-card" id="weather-div" align="center"></div>
       </div>
     </div>
   </div>
 
-    
+
   <div class="row">
     <div class="col s12 m6">
-      <div class="card-panel">
-        <div class="content-card" id="map-div"></div>
-      </div>
+      <div class="card-panel">Google Map</div>
+        <div class="card-panel">
+          <div class="content-card" id="map-div"></div>
+        </div>
     </div>
   </div>
 
 
   <div class="row">
     <div class="col s12 m12">
+      <div class="card-panel">Sports</div>
       <div class="card-panel">
-          <div class="content-card" id="sports-div" align="center">Sports</div>
+        <div class="content-card" id="sports-div" align="center"></div>
       </div>
     </div>
   </div>
 
   <div class="row">
     <div class="col s12 m12">
+      <div class="card-panel">Restaurants</div>
       <div class="card-panel">
-        <div class="content-card" id="places-div" align="center">Restaurants</div>
+        <div class="content-card" id="places-div" align="center"></div>
       </div>
     </div>
   </div>
