updated infowindow styling and functionality in google maps, added additional map search options

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <div class="card-panel">Google Map</div>
         <div class="card-panel">
           <div class="content-card" id="map-div"></div>
+          <div id="map-search-div"></div>
         </div>
     </div>
   </div>
@@ -84,8 +85,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="assets/javascript/map.js" defer></script>
   <script src="assets/javascript/app.js"></script>
-  <script src="assets/javascript/sports.js"></script>
-  <script src="assets/javascript/weather.js"></script>
+  <!-- <script src="assets/javascript/sports.js"></script> -->
+  <!-- <script src="assets/javascript/weather.js"></script> -->
     <!-- <script src="javascript/yelp.js"></script> -->
 
   </body>
