--- a/index.html
+++ b/index.html
@@ -1,93 +1,99 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>What's poppin?</title>
-    <link rel="shortcut icon" href="assets/images/favicon7.png" type="image/png"/>
-    <!-- materialized link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-    <!-- firebase -->
-    <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+<head>
+  <meta charset="utf-8">
+  <title>What's poppin?</title>
+  <link rel="shortcut icon" href="assets/images/favicon7.png" type="image/png" />
+  <!-- materialized link -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+  <!-- firebase -->
+  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
 
-  </head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+    crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
 
-  <body>
-    <nav>
-      <div class="nav-header">
-        <a href="#" class="title valign center-block title" style="color:#7FC3EB">What's Poppin'<a>
-      </div>
-    </nav>
+</head>
 
-    <nav>
-      <div class="nav-wrapper">
-        <form>
-          <div class="input-field">
-            <input id="search" placeholder="Search desired location here." type="search" required>
-            <label class="label-icon" for="search"><i class="material-icons"></i></label>
-            <i class="material-icons">reset</i>
-          </div>
-        </form>
-      </div>
-    </nav>
+<body>
+  <nav>
+    <div class="nav-header">
+      <a href="#" class="title valign center-block title" style="color:#7FC3EB">What's Poppin'
+        <a>
+    </div>
+  </nav>
 
-<div class="container">
+  <nav>
+    <div class="nav-wrapper">
+      <form>
+        <div class="input-field">
+          <input id="search" placeholder="Search desired location here." type="search" required>
+          <label class="label-icon" for="search">
+            <i class="material-icons"></i>
+          </label>
+          <i class="material-icons">reset</i>
+        </div>
+      </form>
+    </div>
+  </nav>
 
-  <div class="row">
-    <div class="col s12 m6">
-      <div class="card-panel">Weather</div>
-      <div class="card-panel">
-        <div class="content-card" id="weather-div" align="center"></div>
+  <div class="container">
+
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card-panel">Weather</div>
+        <div class="card-panel">
+          <div class="content-card" id="weather-div" align="center"></div>
+        </div>
       </div>
     </div>
-  </div>
 
 
-  <div class="row">
-    <div class="col s12 m6">
-      <div class="card-panel">Google Map</div>
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card-panel">Google Map</div>
         <div class="card-panel">
           <div class="content-card" id="map-div"></div>
           <div id="map-search-div"></div>
         </div>
-    </div>
-  </div>
-
-
-  <div class="row">
-    <div class="col s12 m12">
-      <div class="card-panel">Sports</div>
-      <div class="card-panel">
-        <div class="content-card" id="sports-div" align="center"></div>
       </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col s12 m12">
-      <div class="card-panel">Restaurants</div>
-      <div class="card-panel">
-        <div class="content-card" id="places-div" align="center"></div>
+
+    <div class="row">
+      <div class="col s12 m12">
+        <div class="card-panel">Sports</div>
+        <div class="card-panel">
+          <div class="content-card" id="sports-div" align="center"></div>
+        </div>
       </div>
     </div>
-  </div>
 
-</div> <!-- container close -->
+    <div class="row">
+      <div class="col s12 m12">
+        <div class="card-panel">Restaurants</div>
+        <div class="card-panel">
+          <div class="content-card" id="places-div" align="center"></div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <!-- container close -->
 
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByBWhXulCPr2mjC2po6lufTVuHD9QmeU0&libraries=places"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="assets/javascript/map.js" defer></script>
   <script src="assets/javascript/app.js"></script>
-  <!-- <script src="assets/javascript/sports.js"></script> -->
-  <!-- <script src="assets/javascript/weather.js"></script> -->
-    <!-- <script src="javascript/yelp.js"></script> -->
+  <script src="assets/javascript/sports.js"></script>
+  <script src="assets/javascript/weather.js"></script>
 
-  </body>
+</body>
+
 </html>
