--- a/index.html
+++ b/index.html
@@ -28,19 +28,20 @@
     </div>
   </nav>
 
-  <nav>
-    <div class="nav-wrapper">
+  <!-- <nav> -->
+    <!-- <div class="nav-wrapper"> -->
       <form>
         <div class="input-field">
-          <input id="search" placeholder="Search desired location here." type="search" required>
-          <label class="label-icon" for="search">
+          <input id="search" placeholder="Search desired location here." type="search" required></input>
+          <input id="submit" type="submit"></input>
+          <!-- <label class="label-icon" for="search">
             <i class="material-icons"></i>
           </label>
-          <i class="material-icons">reset</i>
+          <i class="material-icons">reset</i> -->
         </div>
       </form>
-    </div>
-  </nav>
+    <!-- </div> -->
+  <!-- </nav> -->
 
   <div class="container">
 
@@ -48,7 +49,12 @@
       <div class="col s12 m6">
         <div class="card-panel">Weather</div>
         <div class="card-panel">
-          <div class="content-card" id="weather-div" align="center"></div>
+          <div class="content-card" id="weather-div" align="center">
+            <div class="city"></div>
+            <div class="temp"></div>
+
+
+          </div>
         </div>
       </div>
     </div>
