--- a/index.html
+++ b/index.html
@@ -27,77 +27,57 @@
     </div>
   </nav>
 
-  <!-- <nav> -->
-    <!-- <div class="nav-wrapper"> -->
-      <form>
-        <div class="input-field">
-          <div class="row">
-            <div class="col s12">
-
-              <input id="search" placeholder="Search desired location here." type="search" required></input>
-              <input id="submit" type="submit"></input>
-            </div>
-            <!-- <div class="col ">
-
-            </div> -->
-
-          </div>
-          <!-- <label class="label-icon" for="search">
-            <i class="material-icons"></i>
-          </label>
-          <i class="material-icons">reset</i> -->
-        </div>
-      </form>
-    <!-- </div> -->
-  <!-- </nav> -->
-
   <div class="container">
-
+    <form>
+      <div class="input-field">
+        <div class="row">
+          <div class="col s12">
+            <input id="search" placeholder="Search desired location here." type="search" required></input>
+            <input id="submit" type="submit"></input>
+          </div>
+        </div>
+      </div>
+    </form>
     <div class="row">
       <div class="col s12 l6">
-        <div class="card-panel">Weather</div>
         <div class="card-panel">
+          <span class="card-title">Weather</span>
           <div class="card-content" id="weather-div" align="center">
             <div class="city"></div>
             <div class="temp"></div>
           </div>
         </div>
       </div>
-      <div class="col s12 l6">
-        <div class="card-panel">Google Map</div>
-        <div class="card-panel">
-          <div class="card-content" id="map-div"></div>
-          <div id="map-search-div"></div>
-        </div>
+    </div>
+      <div class="row">
+        <div class="col s12 l6">
+          <div class="card-panel">
+            <span class="card-title">Around You</span>
+            <div class="card-content" id="map-div"></div>
+            <div id="map-search-div"></div>
+          </div>
       </div>
     </div>
-
-
-    <!-- <div class="row">
-    </div> -->
-
-
     <div class="row">
       <div class="col s12 m12">
         <!-- <div class="card-panel">Sports</div> -->
         <div class="card-panel">
-        <span class="card-title">Sports News</span>
+        <span class="card-title center">Sports News</span>
           <div class="card-content" id="sports-div" align="center"></div>
         </div>
       </div>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="col s12 m12">
         <div class="card-panel">Restaurants</div>
         <div class="card-panel">
           <div class="card-content" id="places-div" align="center"></div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-  </div>
-  <!-- container close -->
+  </div> <!-- container close -->
 
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByBWhXulCPr2mjC2po6lufTVuHD9QmeU0&libraries=places"></script>
