--- a/index.html
+++ b/index.html
@@ -3,27 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <title>What's poppin?</title>
+  <title>Popp'in</title>
   <link rel="shortcut icon" href="assets/images/favicon7.png" type="image/png" />
-  <!-- materialized link -->
+  <!-- Materialize link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <!-- Link to external stylesheet -->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-  <!-- firebase -->
-  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
-    crossorigin="anonymous">
+  <!-- Link to jQuery -->
   <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
-
 </head>
 
 <body>
   <nav>
     <div class="nav-header">
-        <img src="assets/images/poppin-logo.png"/>
+      <img src="assets/images/poppin-logo.png" />
     </div>
   </nav>
 
@@ -38,8 +31,9 @@
         </div>
       </div>
     </form>
+
     <div class="row">
-      <div class="col s12 l6">
+      <div class="col s12">
         <div class="card-panel">
           <span class="card-title">Weather</span>
           <div class="card-content" id="weather-div" align="center">
@@ -49,25 +43,27 @@
         </div>
       </div>
     </div>
-      <div class="row">
-        <div class="col s12 l6">
-          <div class="card-panel">
-            <span class="card-title">Around You</span>
-            <div class="card-content" id="map-div"></div>
-            <div id="map-search-div"></div>
-          </div>
+
+    <div class="row">
+      <div class="col s12">
+        <div class="card-panel">
+          <span class="card-title">Nearby Places</span>
+          <div class="card-content" id="map-div"></div>
+          <div id="map-search-div"></div>
+        </div>
       </div>
     </div>
+
     <div class="row">
       <div class="col s12 m12">
-        <!-- <div class="card-panel">Sports</div> -->
         <div class="card-panel">
-        <span class="card-title center">Sports News</span>
+          <span class="card-title center">Sports News</span>
           <div class="card-content" id="sports-div" align="center"></div>
         </div>
       </div>
     </div>
 
+    <!-- Placeholder for future development -->
     <!-- <div class="row">
       <div class="col s12 m12">
         <div class="card-panel">Restaurants</div>
@@ -77,13 +73,13 @@
       </div>
     </div> -->
 
-  </div> <!-- container close -->
+  </div>
+  <!-- container close -->
 
-
+  <!-- Link to Google Maps API -->
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByBWhXulCPr2mjC2po6lufTVuHD9QmeU0&libraries=places"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- Links to external JavaScript files -->
   <script src="assets/javascript/map.js" defer></script>
-  <script src="assets/javascript/app.js"></script>
   <script src="assets/javascript/sports.js"></script>
   <script src="assets/javascript/weather.js"></script>
 
