updated css, added footer

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="col s12">
             <input id="search" placeholder="Search desired location here." type="search" required></input>
-            <input id="submit" type="submit"></input>
+            <input id="submit" class="search-button" type="submit"></input>
           </div>
         </div>
       </div>
@@ -75,6 +75,14 @@
 
   </div>
   <!-- container close -->
+
+  <footer class="page-footer">
+    <div class="footer-copyright">
+      <div class="container" id="footer-copyright">
+      © 2018 Popp'in
+      </div>
+    </div>
+  </footer>
 
   <!-- Link to Google Maps API -->
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByBWhXulCPr2mjC2po6lufTVuHD9QmeU0&libraries=places"></script>
