cleaned up js files, added user input validation so toast pops up if user enters something other than letters a-z, removed unused files

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <meta charset="utf-8">
   <title>Popp'in</title>
   <link rel="shortcut icon" href="assets/images/favicon7.png" type="image/png" />
+    <!-- Link to jQuery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
   <!-- Materialize link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript for Materialize -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <!-- Link to external stylesheet -->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <!-- Link to jQuery -->
-  <script src="https://code.jquery.com/jquery.js"></script>
+
 </head>
 
 <body>
@@ -31,6 +34,8 @@
         </div>
       </div>
     </form>
+
+    <span id"input-validation"></span>
 
     <div class="row">
       <div class="col s12">
