added controller.js, updated search functionality in weather.js

--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
   <!-- Link to Google Maps API -->
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByBWhXulCPr2mjC2po6lufTVuHD9QmeU0&libraries=places"></script>
   <!-- Links to external JavaScript files -->
-  <script src="assets/javascript/map.js" defer></script>
-  <script src="assets/javascript/sports.js"></script>
+  <script src="assets/javascript/controller.js"></script>
   <script src="assets/javascript/weather.js"></script>
+  <script src="assets/javascript/map.js"></script>
+  <script src="assets/javascript/sports.js"></script>
+
 
 </body>
 
